<resources>
    <string name="app_name">Metronome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_metronome">Metronome</string>
    <string name="drawer_information">Information</string>
    <string name="drawer_settings">Settings</string>
    <string name="start_metronome">START</string>
    <string name="timePlusOne">+1</string>
    <string name="timeMinusOne">-1</string>
    <string name="timeMinusFive">-5</string>
    <string name="timePlusFive">+5</string>
    <string name="stop_metronome">STOP</string>
</resources>
